[gd_scene load_steps=13 format=3 uid="uid://ca63a1n16gadx"]

[ext_resource type="PackedScene" uid="uid://cpeigalq6ps85" path="res://scenes/player/cb_player.tscn" id="1_xho2i"]
[ext_resource type="Texture2D" uid="uid://bpi26hkhwv68d" path="res://Assets/sprites/caipora/caipora_ataque_1.png" id="2_3vvau"]
[ext_resource type="Script" path="res://scenes/player/caipora/caipora.gd" id="2_30r4i"]
[ext_resource type="Texture2D" uid="uid://bo48wgb00veil" path="res://Assets/sprites/caipora/caipora_parada.png" id="2_dvrh7"]
[ext_resource type="Texture2D" uid="uid://de67nf7ril80f" path="res://Assets/sprites/caipora/caipora_ataque_2.png" id="3_tvaw6"]
[ext_resource type="Texture2D" uid="uid://c3cqg1iabxji7" path="res://Assets/sprites/curupira/curupira_trap_1.png" id="3_vr1os"]
[ext_resource type="Texture2D" uid="uid://dohp1do3kyneb" path="res://Assets/sprites/curupira/curupira_trap_2.png" id="4_varto"]
[ext_resource type="Texture2D" uid="uid://di1opgs801j7f" path="res://Assets/sprites/caipora/caipora_walk_1.png" id="5_y3yko"]
[ext_resource type="Texture2D" uid="uid://4m30nj24dnrp" path="res://Assets/sprites/caipora/caipora_walk_2.png" id="6_jxube"]
[ext_resource type="AudioStream" uid="uid://cxs1s05soeys7" path="res://Assets/SFX/hits/Hits/Hit.wav" id="10_bq4oe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s1wmr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3vvau")
}, {
"duration": 2.0,
"texture": ExtResource("3_tvaw6")
}],
"loop": true,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dvrh7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vr1os")
}, {
"duration": 1.0,
"texture": ExtResource("4_varto")
}],
"loop": true,
"name": &"settingTrap",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_y3yko")
}, {
"duration": 1.0,
"texture": ExtResource("2_dvrh7")
}, {
"duration": 1.0,
"texture": ExtResource("6_jxube")
}, {
"duration": 1.0,
"texture": ExtResource("2_dvrh7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdee1"]
size = Vector2(354, 297)

[node name="caipora" instance=ExtResource("1_xho2i")]
script = ExtResource("2_30r4i")
damage = 350

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="0"]
position = Vector2(20, -202)
sprite_frames = SubResource("SpriteFrames_s1wmr")
animation = &"attack"
frame = 1
frame_progress = 0.884657

[node name="attackHitbox" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackHitbox" index="0"]
position = Vector2(144, -131.5)
shape = SubResource("RectangleShape2D_bdee1")
disabled = true
debug_color = Color(0.99393, 0, 0.230103, 0.42)

[node name="tmrAttacking" type="Timer" parent="." index="7"]
one_shot = true

[node name="tmrDashCooldown" type="Timer" parent="." index="8"]
one_shot = true

[node name="asAttack" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource("10_bq4oe")

[connection signal="body_entered" from="attackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="tmrAttacking" to="." method="_on_tmr_attacking_timeout"]
